syntax = "proto3";
package proto;

import "Message.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/message-store/gen/proto/";

message WebChatInputMessage {
  optional string conversationId = 1;
  string email = 2;
  SenderType senderType = 3;
  MessageType type = 4;
  optional string message = 5;
  optional string bytes = 6;
  MessageDirection direction = 7;
}

service WebChatMessageStoreService {
  rpc saveMessage(WebChatInputMessage) returns (Message) {};
}
